@@ -15,8 +15,8 @@ env:
     - PYTHONFAULTHANDLER=x
     - PYTHONWARNINGS=all
   matrix:
-    - DOCUTILS=0.11
     - DOCUTILS=0.12
+    - DOCUTILS=0.13.1
 addons:
   apt:
     packages:
